[package]
name = "react_plug"
version = "0.1.0"
edition = "2021"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
crossbeam-channel = "0.5.13"
react_plug_derive = { path = "react_plug_derive" }
nih_plug_webview = { git = "https://github.com/httnn/nih-plug-webview.git" }
serde_json = "1.0.120"
mime_guess = "2.0.5"
include_dir = "0.7.4"
serde = { version = "1.0.204", features = ["derive"] }

[workspace]
resolver = "2"
members = [
    "react_plug_derive",
    "xtask",
    "example",
]