[package]
name = "react_plug_derive"
version = "0.2.0"
authors = ["223230 <223230@proton.me>"]
edition = "2018"

[lib]
proc-macro = true
doctest = false

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"
include_dir = "0.7.4"
pathdiff = "0.2.1"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }
crossbeam-channel = "0.5.13"
react_plug = { path = "../" }