[package]
name = "react_plug_xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug" }
which = "6.0.2"
toml = "0.7.8"
